@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Net-DNS
-version:      0.49_01
+version:      0.52_01
 version_from: lib/Net/DNS.pm
 installdirs:  site
 requires:
@@ -14,7 +14,4 @@ requires:
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
-license: perl
-license: perl
-license: perl
 license: perl
